--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "agency",
   "version": "1.0.0",
   "description": "agency management",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/candan9/Agency/issues"
   },
-  "homepage": "https://github.com/candan9/Agency#readme"
+  "homepage": "https://github.com/candan9/Agency#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  },
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.11"
+  }
 }
